hphp/hack/test/typecheck/duplicate_fun_attributes.php
<?hh

<<__Deprecated('a'), __Deprecated('b')>>
function f() {}
